# bdk-bitcoind-client

./: Cargo.toml  README.md  justfile  rbmt-version
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  minor_release.md  patch_release.md
.github/actions/setup-rbmt/: action.yml
.github/workflows/: audit.yml  cont_integration.yml  zizmor.yml
examples/: async.rs  bitreq.rs  call_async.rs
src/: bitreq.rs  client.rs  error.rs  lib.rs  rpc.rs
src/bitreq/: v28.rs
src/client/: v28.rs
tests/: rpc_client.rs  test_rpc_client.rs  testenv.rs
