[package]
version = "0.1.0"
name = "bdk_bitcoind_client"
description = "A minimal `bitcoind` RPC client custom built for BDK"
authors = ["Bitcoin Dev Kit Developers"]
repository = "https://github.com/bitcoindevkit/bdk-bitcoind-client"
documentation = "https://docs.rs/bdk-bitcoind-client"
homepage = "https://bitcoindevkit.org"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
corepc-types = { version = "0.12.0", features = ["default"], optional = true }
jsonrpc = { version = "0.20.0", default-features = false }

# These pins are needed for `Cargo-minimal.lock`:
hex-conservative = { version = "1.1.0" } # blame: corepc-node

[dev-dependencies]
anyhow = { version = "1.0.66" }
bdk_bitcoind_client = { path = ".", default-features = false, features = ["bitreq", "29_0"] }
bitcoind = { version = "0.38.0", features = ["download", "29_0"] }

# These pins are needed for `Cargo-minimal.lock`:
tar = { version = "0.4.43" } # blame: corepc-node
filetime = { version = "0.2.8" } # blame: corepc-node
log = { version = "0.4.14" } # blame: corepc-node

[features]
default = ["28_0", "bitreq"]
bitreq = ["dep:corepc-types", "jsonrpc/bitreq_http"]
30_0 = ["29_0"]
29_0 = ["28_0"]
28_0 = []

[package.metadata.rbmt.toolchains]
stable = "1.95.0"
nightly = "nightly"

[package.metadata.rbmt.test]
exclude_features = ["default"]

# Allow multiple versions of the same package in the dependency tree.
[package.metadata.rbmt.lint]
allowed_duplicates = [
    "base64",
]
